SFDCProject/src/objects/Promotion__c.object
<CustomObject>
    <fields>
        <fullName>At_Stage1__c</fullName>
        <label>At Stage</label>
        <picklist>
            <controllingField>Referral_Payout_on1__c</controllingField>
            <picklistValues>
                <fullName>Converted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NTP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PTO Granted, Facility Active</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>At_Stage2__c</fullName>
        <label>At Stage</label>
        <picklist>
            <controllingField>Referral_Payout_on2__c</controllingField>
            <picklistValues>
                <fullName>Converted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NTP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PTO Granted, Facility Active</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>At_Stage3__c</fullName>
        <label>At Stage</label>
        <picklist>
            <controllingField>Referral_Payout_on3__c</controllingField>
            <picklistValues>
                <fullName>Converted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NTP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PTO Granted, Facility Active</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Unit_Allocation__c</fullName>
        <label>Business Unit Allocation</label>
        <picklist>
            <picklistValues>
                <fullName>Direct Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Only</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expires_after_usage__c</fullName>
        <inlineHelpText>Please specify # of times a promotion can be used. For example, if a promotion can be used 4 times in 3 weeks, please specify 4 here.</inlineHelpText>
        <label>Expires after # usage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>In_Time_Duration_Length__c</fullName>
        <inlineHelpText>Please specify time duration restriction on # of times a promotion can be used. For example, if a promotion can be used 4 times in 3 weeks, please specify 3 here.</inlineHelpText>
        <label>In Time Duration Length</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>In_Time_Duration_Unit__c</fullName>
        <inlineHelpText>Please specify unit of time duration restriction on # of times a promotion can be used. For example, if a promotion can be used 4 times in 3 weeks, please select &quot;weeks&quot; as a picklist value.</inlineHelpText>
        <label>In Time Duration Unit</label>
        <picklist>
            <picklistValues>
                <fullName>Weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Years</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Promotion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Promotion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Promotion_Active__c</fullName>
        <formula>If(End_Date__c &gt;= TODAY() , &quot;Active&quot;, &quot;Inactive&quot;)</formula>
        <label>Promotion Active?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promotion_Code__c</fullName>
        <label>Promotion Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promotion_ID__c</fullName>
        <formula>Id</formula>
        <label>Promotion ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promotion_Type__c</fullName>
        <label>Promotion Type</label>
        <picklist>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead-Gen Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Customer Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sunrun</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Referee_Amount__c</fullName>
        <label>Referee Amount</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Referee_Non_Monetary_Compensation_1__c</fullName>
        <label>Referee Non-Monetary Compensation</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referee_Non_Monetary_Compensation_2__c</fullName>
        <label>Referee Non-Monetary Compensation</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referee_Non_Monetary_Compensation_3__c</fullName>
        <label>Referee Non-Monetary Compensation</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referee_Payment_Amount1__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Referee Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Referee_Payment_Amount2__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Referee Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Referee_Payment_Amount3__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Referee Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Referee_Payment_Option1__c</fullName>
        <label>Referee Payment Option</label>
        <picklist>
            <picklistValues>
                <fullName>Check / Credit on Monthly Bill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Referee_Payment_Option2__c</fullName>
        <label>Referee Payment Option</label>
        <picklist>
            <picklistValues>
                <fullName>Check / Credit on Monthly Bill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Referee_Payment_Option3__c</fullName>
        <label>Referee Payment Option</label>
        <picklist>
            <picklistValues>
                <fullName>Check / Credit on Monthly Bill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Referral_Payout_on1__c</fullName>
        <label>Referral Payout on</label>
        <picklist>
            <picklistValues>
                <fullName>Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asset</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Referral_Payout_on2__c</fullName>
        <label>Referral Payout on</label>
        <picklist>
            <picklistValues>
                <fullName>Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asset</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Referral_Payout_on3__c</fullName>
        <label>Referral Payout on</label>
        <picklist>
            <picklistValues>
                <fullName>Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asset</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Referred_Amount__c</fullName>
        <label>Referred Amount</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Referrer_Non_Monetary_Compensation_1__c</fullName>
        <label>Referrer Non-Monetary Compensation</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referrer_Non_Monetary_Compensation_2__c</fullName>
        <label>Referrer Non-Monetary Compensation</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referrer_Non_Monetary_Compensation_3__c</fullName>
        <label>Referrer Non-Monetary Compensation</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referrer_Payment_Amount1__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Referrer Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Referrer_Payment_Amount2__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Referrer Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Referrer_Payment_Amount3__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Referrer Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Referrer_Payment_Option1__c</fullName>
        <label>Referrer Payment Option</label>
        <picklist>
            <picklistValues>
                <fullName>Check / Credit on Monthly Bill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Referrer_Payment_Option2__c</fullName>
        <label>Referrer Payment Option</label>
        <picklist>
            <picklistValues>
                <fullName>Check / Credit on Monthly Bill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Referrer_Payment_Option3__c</fullName>
        <label>Referrer Payment Option</label>
        <picklist>
            <picklistValues>
                <fullName>Check / Credit on Monthly Bill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <formula>Total_Source_Amount__c +  Total_Target_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Source_Amount__c</fullName>
        <formula>Referrer_Payment_Amount1__c +  Referrer_Payment_Amount2__c +  Referrer_Payment_Amount3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Source Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Target_Amount__c</fullName>
        <formula>Referee_Payment_Amount1__c +  Referee_Payment_Amount2__c + Referee_Payment_Amount3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Target Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Utility__c</fullName>
        <label>Utility</label>
        <picklist>
            <picklistValues>
                <fullName>ACE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allegheny</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anaheim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BGE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concord</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ConEdison</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delmarva</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HECO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HELCO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JCP&amp;L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LADWP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MECO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Met-Ed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Grid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NSTAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NYSEG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O&amp;R</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pacific Gas &amp; Electric (PG&amp;E)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pacific Power</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pasadena Water &amp; Power (PWP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PECO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pepco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portland General Electric Co</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PSE&amp;G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rockland Electric Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salt River Project (SRP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>San Diego Gas &amp; Electric (SDG&amp;E)</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Promotion</label>
    <listViews>
        <fullName>All_Promotions</fullName>
        <columns>NAME</columns>
        <columns>Promotion_Code__c</columns>
        <columns>Primary_Promotion__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Promotions</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Promotion Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Promotions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ExpiresAfterUsagePositiveInteger</fullName>
        <active>true</active>
        <errorConditionFormula>if( Expires_after_usage__c &lt;= 0,true,false)</errorConditionFormula>
        <errorDisplayField>Expires_after_usage__c</errorDisplayField>
        <errorMessage>You must enter a value greater than zero.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IfReferrerPayment1IsNotNullRequireOther</fullName>
        <active>true</active>
        <errorConditionFormula>IF( 
AND( 
NULLVALUE(Referrer_Payment_Amount1__c,0)&gt;0, 
TEXT(At_Stage1__c)=&apos;&apos;, 
TEXT(Referral_Payout_on1__c)=&apos;&apos;, 
TEXT(Referrer_Payment_Option1__c)=&apos;&apos;) 
,true,false)</errorConditionFormula>
        <errorDisplayField>Referral_Payout_on1__c</errorDisplayField>
        <errorMessage>If you enter a Referrer Amount, you also need to enter values for Payout On, At Stage, and Payment Option.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IfReferrerPayment2IsNotNullRequireOther</fullName>
        <active>true</active>
        <errorConditionFormula>IF( 
AND( 
NULLVALUE(Referrer_Payment_Amount2__c,0)&gt;0, 
TEXT(At_Stage2__c)=&apos;&apos;, 
TEXT(Referral_Payout_on2__c)=&apos;&apos;, 
TEXT(Referrer_Payment_Option2__c)=&apos;&apos;)
,true,false)</errorConditionFormula>
        <errorDisplayField>Referral_Payout_on2__c</errorDisplayField>
        <errorMessage>If you enter a Referrer Amount, you also need to enter values for Payout On, At Stage, and Payment Option.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IfReferrerPayment3IsNotNullRequireOther</fullName>
        <active>true</active>
        <errorConditionFormula>IF( 
AND( 
NULLVALUE(Referrer_Payment_Amount3__c,0)&gt;0, 
TEXT(At_Stage3__c)=&apos;&apos;, 
TEXT(Referral_Payout_on3__c)=&apos;&apos;, 
TEXT(Referrer_Payment_Option3__c)=&apos;&apos;) 
,true,false)</errorConditionFormula>
        <errorDisplayField>Referral_Payout_on3__c</errorDisplayField>
        <errorMessage>If you enter a Referrer Amount, you also need to enter values for Payout On, At Stage, and Payment Option.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>InTimeDurationLengthPositiveValue</fullName>
        <active>true</active>
        <errorConditionFormula>IF( In_Time_Duration_Length__c &lt;= 0,true,false)</errorConditionFormula>
        <errorDisplayField>In_Time_Duration_Length__c</errorDisplayField>
        <errorMessage>You must enter an In Time Duration Length greater than zero.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MustEnterAtLeastOneRule</fullName>
        <active>false</active>
        <errorConditionFormula>If( AND(
NULLVALUE(Referrer_Payment_Amount1__c,0)=0,
NULLVALUE(Referrer_Payment_Amount2__c,0)=0,
NULLVALUE(Referrer_Payment_Amount3__c,0)=0),true,false)</errorConditionFormula>
        <errorMessage>You must enter at least one amount for a referrer payment</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RefereePayment1GreaterThanOrEqualToZero</fullName>
        <active>true</active>
        <errorConditionFormula>If(Referee_Payment_Amount1__c &lt; 0, true, false)</errorConditionFormula>
        <errorDisplayField>Referee_Payment_Amount1__c</errorDisplayField>
        <errorMessage>Payment Amount must be greater than zero</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RefereePayment2GreaterThanZero</fullName>
        <active>true</active>
        <errorConditionFormula>IF( Referee_Payment_Amount2__c &lt; 0, true, false)</errorConditionFormula>
        <errorDisplayField>Referee_Payment_Amount1__c</errorDisplayField>
        <errorMessage>Payment amount must be greater than zero.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RefereePayment3GreaterThanZero</fullName>
        <active>true</active>
        <errorConditionFormula>IF( Referee_Payment_Amount3__c &lt; 0, true,false)</errorConditionFormula>
        <errorDisplayField>Referee_Payment_Amount3__c</errorDisplayField>
        <errorMessage>Payment amount must be greater than zero</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ReferrerPayment1GreaterThanZero</fullName>
        <active>false</active>
        <errorConditionFormula>IF( Referrer_Payment_Amount1__c &lt; 0, true, false)</errorConditionFormula>
        <errorDisplayField>Referrer_Payment_Amount1__c</errorDisplayField>
        <errorMessage>Payment amount must be greater than zero.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ReferrerPayment2GreaterThanZero</fullName>
        <active>true</active>
        <errorConditionFormula>if( Referrer_Payment_Amount2__c&lt;0 ,true,false)</errorConditionFormula>
        <errorDisplayField>Referrer_Payment_Amount2__c</errorDisplayField>
        <errorMessage>Payment amount must be greater than zero.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ReferrerPayment3GreaterThanZero</fullName>
        <active>true</active>
        <errorConditionFormula>IF( Referrer_Payment_Amount3__c &lt;0,true,false)</errorConditionFormula>
        <errorDisplayField>Referrer_Payment_Amount3__c</errorDisplayField>
        <errorMessage>Payment amount must be greater than zero.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RuleCriteriaNeedsAllThree</fullName>
        <active>true</active>
        <errorConditionFormula>IF(
AND(NOT(ISNULL(Expires_after_usage__c )),
OR(ISNULL(In_Time_Duration_Length__c) ,ISPICKVAL(In_Time_Duration_Unit__c,&apos;&apos;))),true,
IF(
AND(NOT(ISNULL(In_Time_Duration_Length__c)),
OR(ISNULL(Expires_after_usage__c ) ,ISPICKVAL(In_Time_Duration_Unit__c,&apos;&apos;))),true,
IF(
AND(NOT(ISPICKVAL(In_Time_Duration_Unit__c,&apos;&apos;)),
OR(ISNULL(In_Time_Duration_Length__c) ,ISNULL(Expires_after_usage__c ))),true,
false)))</errorConditionFormula>
        <errorMessage>If you enter a value for one of the following: Expires after # usage, In Time Duration Length, or In Time Duration Unit, then all three must have a value entered.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_date_should_be_lesser_than_enddate</fullName>
        <active>true</active>
        <errorConditionFormula>Start_Date__c &gt; End_Date__c</errorConditionFormula>
        <errorMessage>Start Date should be less than or equal to the End Date</errorMessage>
    </validationRules>
</CustomObject>